manifests/harbor/ingress/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: harbor
  namespace: repositories
spec:
  hosts:
    - harbor.dev.innovatshub.com
  gateways:
    - istio-system/innovatshub-dev
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: harbor
            port:
              number: 80
